<resources>
    <string name="app_name">Malibu Pharmacy</string>
    <string name="signin">SIGN IN</string>
    <string name="or_sign_in_with">Or SIgn In With</string>
    <string name="hello">Hello</string>
    <string name="user">User</string>
    <string name="search">Search</string>
    <string name="username">Username</string>
    <string name="sign_in">SIGN IN</string>
    <string name="log_in">LOG IN</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="details">Details</string>
    <string name="user_details">User Details</string>
    <string name="profilepage">PROFILE</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="personal_details">Personal Details</string>
    <string name="person_details">Person Details</string>
    <string name="persons_details">Personal Details</string>
    <string name="insurance_details">Insurance Details</string>
    <string name="insurance">Insurance</string>
    <string name="delivery">DELIVERY</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="notify">Notify</string>
    <string name="notifications">Notifications</string>
    <string name="login">LOG IN</string>
    <string name="employee_id">Employee ID</string>
    <string name="password">Password</string>
    <string name="login_2">LOG IN</string>
    <string name="or_use_fingerprint">OR USE FINGERPRINT</string>
    <string name="pass_word">Password</string>
    <string name="home_text">Home</string>
    <string name="profile_text">Profile</string>
    <string name="prescription">Prescription</string>
    <string name="chats">Chats</string>
    <string name="notification">NOTIFICATIONS</string>
    <string name="homepage">HOMEPAGE</string>
    <string name="faq">FAQ</string>
    <string name="locate_us">LOCATE US</string>
    <string name="branches">BRANCHES</string>
    <string name="find_us">FIND US</string>
    <string name="f_a_q">F A Q</string>
    <string name="about_us">ABOUT US</string>
    <string name="our_team">OUR TEAM</string>
    <string name="prescriptionUpload">PRESCRIPTION</string>
    <string name="hello_capture_or_choose_an_image_form_gallery_to_scan_prescription">Hello! Capture or choose an image form gallery to scan prescription</string>
    <string name="prescription_upload">PRESCRIPTION</string>
    <string name="f_a_qs">FAQ</string>
    <string name="how_to_navigate">HOW TO NAVIGATE</string>
    <string name="locate_us_">LOCATE US</string>
    <string name="_home">Home</string>
    <string name="_profile">Profile</string>
    <string name="_messages">Messages</string>
    <string name="welcome_user">Welcome User</string>
    <string name="personal_details_">PERSONAL DETAILS</string>
    <string name="welcome">WELCOME!</string>
    <string name="hello_kindly_fill_in_your_personal_details">Hello!Kindly fill in your personal details.</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="save">SAVE</string>
    <string name="phone_number">Phone Number</string>
    <string name="insurance_details_">INSURANCE DETAILS</string>
    <string name="principal_name_">Principal Name</string>
    <string name="dependant_name_">Dependant Name</string>
    <string name="member_number_">Member Number</string>
    <string name="policy_number_">Policy Number</string>
    <string name="employer_">Employer</string>
    <string name="hello_kindly_fill_in_your_insurance_details_">Hello!Kindly fill in your insurance details.</string>
    <string name="image_">Image</string>
    <string name="authenticate">Authenticate</string>
    <string name="medical_history">Medical History</string>
    <string name="medical_history_">MEDICAL HISTORY</string>
    <string name="hello_kindly_fill_in_your_medical_details_below">Hello! Kindly fill in your medical details below</string>
    <string name="pay">PAY</string>

</resources>