<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp"
    tools:context=".ProfileActivity">




    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_or_icon"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSearch"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_or_icon" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/profilepage"
        android:textColor="@color/text_or_icon"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageBack"
        app:layout_constraintEnd_toStartOf="@+id/imageSearch"
        app:layout_constraintStart_toEndOf="@+id/imageBack"
        app:layout_constraintTop_toTopOf="@+id/imageBack"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imageProfile"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:src="@drawable/profileperson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:riv_oval="true"/>
    <TextView
        android:id="@+id/textUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/jane_doe"
        android:textColor="@color/text_or_icon"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageProfile"/>


    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/iconsbackground"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:constraint_referenced_ids="cardProfile,cardInsurance,cardDelivery,cardChats"
        app:flow_horizontalGap="@dimen/_8sdp"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="@dimen/_8sdp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@id/imageProf"
        app:layout_constraintTop_toBottomOf="@+id/textUsername"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/personicon5"
                android:contentDescription="@string/persons_details"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/person_details"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_30ssp"
                android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardInsurance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/profileinsurance"
                android:contentDescription="@string/insurance_details"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insurance"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_30ssp"
                android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDelivery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/profiledeliver3"
                android:contentDescription="@string/delivery_details"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_30ssp"
                android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardChats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/chaticon3"
                android:contentDescription="@string/notify"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textColor="@color/text_or_icon"
                android:textSize="@dimen/_30ssp"
                android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageProf"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/personicon82"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:riv_oval="true" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageOCR"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:background="@drawable/ocricon3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/imageProf"
        app:riv_oval="true" />
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageHome"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:background="@drawable/homeicon52"
        app:layout_constraintBottom_toBottomOf="@+id/imageProf"
        app:layout_constraintStart_toStartOf="parent"/>
















</androidx.constraintlayout.widget.ConstraintLayout>