<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp"
    android:background="@drawable/background1"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="#30FFFFFF"
        android:drawableStart="@drawable/ic_baseline_person_pin_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:padding="20dp"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@+id/username"
        android:background="#30FFFFFF"
        android:hint="@string/pass_word"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:layout_margin="30dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:layout_below="@id/password"
        android:text="@string/log_in"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:drawablePadding="10dp"/>



    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/google" />
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/facebook"/>
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:src="@drawable/twitter"/>

    </LinearLayout>



</RelativeLayout>