<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".HomepageActivity">



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_or_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageSearch"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:src="@drawable/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_or_icon"/>
    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/homepage"
        android:textColor="@color/text_or_icon"
        android:textSize="@dimen/_14ssp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/imageBack"
        app:layout_constraintEnd_toStartOf="@id/imageSearch"
        app:layout_constraintStart_toEndOf="@id/imageBack"
        app:layout_constraintTop_toTopOf="@id/imageBack" />
    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/roundImage"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:src="@drawable/malibulogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />



    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        app:constraint_referenced_ids="info,faq,branches"
        app:flow_horizontalGap="@dimen/_8sdp"
        app:flow_maxElementsWrap="2"
        app:flow_verticalGap="@dimen/_8sdp"
        app:flow_wrapMode="aligned"
        app:layout_constraintBottom_toTopOf="@id/imageProf"
        app:layout_constraintTop_toBottomOf="@id/roundImage"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="MEET THE TEAM"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_navigate"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/branches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_16sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locate_us_"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                android:textStyle="italic"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>




    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imagechats"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_2sdp"
        android:background="@drawable/chaticon3"
        android:contentDescription="@string/_messages"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageHome"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_7sdp"
        android:background="@drawable/homeicon52"
        android:contentDescription="@string/_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageProf"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_1sdp"
        android:background="@drawable/personicon82"
        android:contentDescription="@string/_profile"
        app:layout_constraintBottom_toBottomOf="@id/imageHome"
        app:layout_constraintEnd_toStartOf="@id/imagechats"
        app:layout_constraintStart_toEndOf="@id/imageHome"
        />


</androidx.constraintlayout.widget.ConstraintLayout>